--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,8 +29,10 @@
     "prettier/prettier": "error",
     "@typescript-eslint/no-use-before-define": "off",
     "no-use-before-define": "off",
+    "jsx-a11y/label-has-associated-control": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
+    "react/prop-types": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "import/prefer-default-export": "off",
     "@typescript-eslint/explicit-function-return-type": [
