--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@unform/core": "^2.1.3",
+    "@unform/web": "^2.1.3",
     "axios": "^0.21.0",
+    "lodash": "^4.17.20",
     "polished": "^4.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -46,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.165",
     "@types/styled-components": "^5.1.4",
     "@types/yup": "^0.29.9",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
