--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "polished": "^4.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.12.1",
     "react-scripts": "4.0.0",
+    "react-spring": "^8.0.27",
     "react-toastify": "^6.1.0",
     "styled-components": "^5.2.1",
-    "typescript": "^4.0.3",
+    "typescript": "~4.0.5",
+    "uuidv4": "^6.2.5",
     "web-vitals": "^0.2.4",
-    "yup": "^0.30.0"
+    "yup": "^0.31.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +53,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.165",
+    "@types/react-modal": "^3.10.6",
     "@types/styled-components": "^5.1.4",
     "@types/yup": "^0.29.9",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
